# UniVLA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_a100.sh  run_l40s.sh
configs/: moe_fast_video.json  moe_fast_video_pretrain.json
docs/: simpler.md  speedup_ideas.md
emu3/mllm/: liger_patch.py  modeling_emu3.py
models/inference/: inference_action.py  inference_vision.py
models/tokenizer/: emu3_tokenizer.py
reference/RoboVLMs/: real_inpainting
reference/RoboVLMs/eval/simpler/: env_test.py  get_results.py  main_inference_emu.py  model_wrapper.py
reference/RoboVLMs/scripts/: bridge_univla.bash
scripts/: pack_npy_to_hdf5.py
scripts/pretrain/: train_video_1node.sh
scripts/real_aloha/: train_real_aloha_chunknorm.sh
scripts/sft/: zero2.json  zero2_lora.json  zero2_muon.json  zero3.json  zero3_offload.json
scripts/simulator/calvin/: train_calvin_abcd_video.sh
scripts/simulator/libero/: train_libero_video.sh
scripts/simulator/simplerenv/: train_simplerenv_bridge_video.sh  train_simplerenv_bridge_video_a100.sh  train_simplerenv_bridge_video_l40s.sh  train_simplerenv_bridge_video_l40s_lora.sh  train_simplerenv_bridge_video_lora.sh
tools/pickle_gen/: pickle_generation_simplerenv_bridge.py
train/: datasets.py  train_moe.py
