[project]
name = "univla"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "transformers==4.44.0",
    "tiktoken==0.6.0",
    "pillow",
    "gradio==4.44.0",
    "numpydantic==1.6.8",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
