[project]
name = "univla"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "transformers==4.51.0",
    "deepspeed>=0.18.0",
    "setuptools",
    "accelerate",
    "tiktoken==0.6.0",
    "pillow",
    "gradio==4.44.0",
    "numpydantic==1.6.8",
    "wandb>=0.25.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
